feat: rewrite render

--- a/setup.cfg
+++ b/setup.cfg
@@ -27,7 +27,7 @@ include_package_data = True
 setup_requires =
     setuptools
 install_requires =
-    gym
+    gymnasium
     numpy
 
 [options.package_data]
